finished - fixed tea of the month heading spacing

--- a/Resources/css/style.css
+++ b/Resources/css/style.css
@@ -79,9 +79,6 @@ nav span {
   margin: 10px;
   display: block;
 }
-.tea-of-the-month .headings {
-  padding-bottom: 50px;
-}
 
 .locations {
   height: 500px;
@@ -99,6 +96,7 @@ nav span {
   flex-wrap: nowrap;
   margin-top: -30px;
 }
+
 .address {
   width: 300px;
   height: 280px;
